Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.9.2, Qt Creator 4.10.0-beta1
-
Fix Version/s: Qt Creator 4.10.0-beta2
-
Component/s: Android Support
-
Labels:
-
Platform/s:
-
Commits:30e863b676741740502e679bd05aec348955c6ee, ad6dd3fa76add553381ce070a7c3d9c058d1b282 30e863b676741740502e679bd05aec348955c6ee (qt-creator/qt-creator/4.10)
Description
Steps to reproduce:
- install Android armv7 binary via online installer (Qt 5.12.4)
- launch QtCreator 4.9.2 (or 4.10.0-beta1)
- compile "wiggly" example
- deploy to device
Expected result:
The application gets deployed to the device
Actual result:
The application does not get deployed. Compile succeeds, but when trying to run the example it fails with:
Initializing deployment to Android device/simulator Cannot find the android build step. Error while building/deploying project wiggly (kit: Android for armeabi-v7a (Clang Qt 5.12.4 for Android ARMv7)) When executing step "Deploy to Android device"
When trying to deploy with QtC 4.10.0-beta1, the QtCreator also crashes.
Dump summary:
Dump Summary------------Dump File: SquishDump-20190613-125954.dmp : C:\Users\QT\AppData\Local\Temp\SquishDumps\SquishDump-20190613-125954.dmpLast Write Time: 13.6.2019 12.59.54Process Name: qtcreator.exe : C:\Users\QT\RTA\qt5\Tools\Preview\Qt Creator 4.10.0-beta1\bin\qtcreator.exeProcess Architecture: x86Exception Code: 0xC0000005Exception Information: The thread tried to read from or write to a virtual address for which it does not have the appropriate access.Heap Information: Not Present
Looks like it's the widget examples that aren't getting deployed, e.g. 'gallery' is running fine on the device.
Attachments
For Gerrit Dashboard: QTCREATORBUG-22564 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
265175,2 | Fix crash when project node is not found | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
265501,2 | Fix restoring Android build steps from ealier Qt Creator versions | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |