Fix crash when project node is not found

Change-Id: I235fecb579023530692742f14474ae5229237c28
Fixes: QTCREATORBUG-22564
Reviewed-by: hjk <hjk@qt.io>